# Polykit

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md
.github/workflows/: rust.yml
docs/: EXAMPLES.md  GETTING_STARTED.md  REMOTE_CACHE.md
polykit/: Cargo.toml  README.md
polykit-adapters/: Cargo.toml
polykit-adapters/src/: go.rs  js.rs  lib.rs  python.rs  rust.rs
polykit-cache/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env
polykit-cache/src/: config.rs  lib.rs  main.rs  server.rs  storage.rs  verification.rs
polykit-cache/tests/: integration_test.rs  storage_test.rs  verification_test.rs
polykit-core/: Cargo.toml
polykit-core/benches/: performance.rs
polykit-core/src/: adapter.rs  adapter_registry.rs  cache.rs  change.rs  command_validator.rs  config.rs  error.rs  executor.rs  graph.rs  lib.rs  metrics.rs  package.rs  path_utils.rs  release.rs  release_reporter.rs  remote_cache.rs  runner.rs  scanner.rs  simd_utils.rs  streaming.rs  string_interner.rs  task_cache.rs  watcher.rs
polykit-core/src/remote_cache/: artifact.rs  backend.rs  cache_key.rs  config.rs  filesystem.rs  http.rs  integrity.rs  mod.rs
polykit-core/tests/: cache_performance_test.rs  change_test.rs  command_validator_test.rs  config_test.rs  graph_proptest.rs  graph_test.rs  incremental_update_test.rs  package_test.rs  performance_test.rs  remote_cache_test.rs  scanner_test.rs  streaming_test.rs  task_cache_test.rs
polykit/src/: commands.rs  main.rs
polykit/src/commands/: discovery.rs  execution.rs  info.rs  mod.rs  release_reporter.rs  watch.rs
polykit/src/formatting/: headers.rs  mod.rs  output.rs  progress.rs  status.rs  tables.rs
polykit/tests/: integration_test.rs
