[workspace]
members = [
    "polykit",
    "polykit-core",
    "polykit-adapters",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polykit Contributors"]
license = "Apache-2.0"
repository = "https://github.com/jonathanmagambo/polykit"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.6"
rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
regex = "1.10"
semver = "1.0"
tempfile = "3.10"
bincode = "1.3"
indexmap = "2.2"
smallvec = "1.13"
indicatif = "0.17"
owo-colors = "4.0"
notify = "6.1"
dirs = "5.0"
ctrlc = "3.4"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.5"
rustc-hash = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
git2 = "0.19"
mimalloc = { version = "0.1", default-features = false }
zstd = "0.13"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"