[package]
name = "polykit-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polykit-core = { path = "../polykit-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
regex.workspace = true
git2.workspace = true
semver.workspace = true
tokio.workspace = true
once_cell = "1.19"

[dev-dependencies]
tempfile.workspace = true
