[package]
name = "polykit-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language adapters for Polykit (JavaScript, TypeScript, Python, Go, Rust)"
keywords = ["monorepo", "build-tool", "language-adapters"]
categories = ["development-tools"]

[dependencies]
polykit-core = { version = "0.2.0", path = "../polykit-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
regex.workspace = true
git2.workspace = true
semver.workspace = true
tokio.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
