[package]
name = "polykit-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "polykit-cache"
path = "src/main.rs"

[dependencies]
polykit-core = { path = "../polykit-core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zstd.workspace = true
tar.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
polykit-core = { path = "../polykit-core" }
tokio.workspace = true
