[package]
name = "polykit-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-hosted HTTP cache server for Polykit remote caching"
keywords = ["monorepo", "cache", "remote-cache", "build-cache"]
categories = ["development-tools", "web-programming::http-server"]
readme = "README.md"

[[bin]]
name = "polykit-cache"
path = "src/main.rs"

[dependencies]
polykit-core = { version = "0.2.0", path = "../polykit-core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zstd.workspace = true
tar.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
tokio.workspace = true
