[package]
name = "polykit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
petgraph.workspace = true
thiserror.workspace = true
walkdir.workspace = true
regex.workspace = true
semver.workspace = true
rayon.workspace = true
bincode.workspace = true
indexmap.workspace = true
smallvec.workspace = true
dirs.workspace = true
notify.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
proptest.workspace = true
