[package]
name = "polykit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Polykit monorepo orchestration"
keywords = ["monorepo", "build-tool", "orchestration", "dependencies"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
petgraph.workspace = true
thiserror.workspace = true
walkdir.workspace = true
jwalk.workspace = true
regex.workspace = true
semver.workspace = true
rayon.workspace = true
bincode.workspace = true
indexmap.workspace = true
smallvec.workspace = true
dirs.workspace = true
notify.workspace = true
tokio.workspace = true
rustc-hash.workspace = true
xxhash-rust.workspace = true
git2.workspace = true
mimalloc.workspace = true
zstd.workspace = true
lz4_flex.workspace = true
memmap2.workspace = true
sha2.workspace = true
blake3.workspace = true
reqwest.workspace = true
tar.workspace = true
async-trait.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "performance"
harness = false
