[package]
name = "polykit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, language-agnostic monorepo orchestration tool"
keywords = ["monorepo", "build-tool", "orchestration", "dependencies", "workspace"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "polykit"
path = "src/main.rs"

[dependencies]
polykit-core = { version = "0.2.0", path = "../polykit-core" }
polykit-adapters = { version = "0.2.0", path = "../polykit-adapters" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
petgraph.workspace = true
serde_json.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
ctrlc.workspace = true
tokio.workspace = true
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true
